bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: '(' expected but identifier found.
  if Math.abs(100-n) < 10 {
     ^NearHundred:5: error: '(' expected but identifier found.
  if Math.abs(100-n) < 20 {
     ^NearHundred:11: error: illegal start of simple expression
} 
^